--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/jest/bin/jest.js test"
+    "test": "node_modules/jest/bin/jest.js test",
+    "lint": "node_modules/eslint/bin/eslint.js ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-env": "^7.5.5",
+    "eslint": "^6.1.0",
     "jest": "^24.8.0"
   },
   "dependencies": {}
