--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/jest/bin/jest.js test",
+    "test": "node_modules/jest/bin/jest.js --testPathPattern=/test/",
     "lint": "node_modules/eslint/bin/eslint.js ."
   },
   "keywords": [],
@@ -15,5 +15,8 @@
     "eslint": "^6.1.0",
     "jest": "^24.8.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "jest": {
+    "moduleDirectories": ["node_modules", "src"]
+  }
 }
