rename source directory

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "dependencies": {},
   "jest": {
-    "moduleDirectories": ["node_modules", "src"]
+    "moduleDirectories": ["node_modules", "lib"]
   }
 }
