--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "diamond",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "bin": "dist/index.js",
+  "main": "lib/index.js",
+  "bin": "lib/index.js",
   "scripts": {
-    "prepack": "npm run test && npm run lint && ./node_modules/.bin/babel lib --out-dir dist",
-    "preinstall": "npm run prepack",
+    "prepack": "./node_modules/.bin/babel src --out-dir lib",
     "test": "node_modules/jest/bin/jest.js --testPathPattern=/test/",
-    "lint": "node_modules/eslint/bin/eslint.js lib test"
+    "lint": "node_modules/eslint/bin/eslint.js src test"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +23,7 @@
   "jest": {
     "moduleDirectories": [
       "node_modules",
-      "lib"
+      "src"
     ]
   }
 }
